--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+main {
+    max-width: 90vw;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
 h1 {
     text-align: center;
 }
@@ -10,7 +16,7 @@ textarea {
     padding: 10px;
     box-sizing: border-box;
     border: 1px solid #434141;
-    resize: none;
+    resize: vertical;
 }
 button {
     padding: 10px;
