--- a/style.css
+++ b/style.css
@@ -10,14 +10,8 @@ main {
 h1 {
     text-align: center;
 }
-textarea {
-    width: 100%;
-    height: 200px;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #434141;
-    resize: vertical;
-}
+
+
 button {
     padding: 10px;
     border: 0;
@@ -44,4 +38,60 @@ select {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+
+
+.textarea {
+    position: relative;
+}
+
+.textarea__clear-button {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    transform: translateY(-50%);
+    padding: 10px;
+    border: 0;
+    border-radius: 50%;
+    background: #ccc;
+    cursor: pointer;
+    display: block;
+}
+
+.textarea__clear-button::after {
+    position: absolute;
+    background-color: #000;
+    content: "";
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 1px;
+    height: 15px;
+    z-index: 1;
+}
+
+.textarea__clear-button::before {
+    position: absolute;
+    background-color: #000;
+    content: "";
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    width: 1px;
+    height: 15px;
+    z-index: 1;
+}
+
+.textarea__text-area:placeholder-shown + .textarea__clear-button {
+    display: none;
+}
+
+.textarea__text-area {
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #434141;
+    resize: vertical;
 }
